<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">水贝优选</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_loading">Loading</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    
    <!-- listview -->
    <string name="drop_down_list_header_default_text">点击刷新&#8230;</string>
    <string name="drop_down_list_header_pull_text">继续下拉进行刷新&#8230;</string>
    <string name="drop_down_list_header_release_text">松手后进行刷新&#8230;</string>
    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>
    <string name="image_content">Image</string>
    <string name="update_at">更新于:&#160;</string>

    <!-- zoohui文字设置 -->
    <string name="title">水贝优选</string>
    <string name="login">用户登录</string>
    <string name="start">开始旅程</string>
    <string name="identity">评估鉴定</string>
    <string name="designer">镶嵌设计</string>
    <string name="former">旧物回收</string>
    <string name="retread">翻新改款</string>
    <string name="seek">找货优选</string>
    <string name="spot">珠宝现货</string>

</resources>